@@ -1,5 +1,10 @@
-## Script (Python) "mail_password"
 ##title=Mail a user's password
 ##parameters=
-REQUEST=context.REQUEST
-return context.portal_registration.mailPassword(REQUEST['userid'], REQUEST)
+from Products.CMFCore.utils import getUtilityByInterfaceName
+
+rtool = getUtilityByInterfaceName('Products.CMFCore.interfaces.IRegistrationTool')
+utool = getUtilityByInterfaceName('Products.CMFCore.interfaces.IURLTool')
+REQUEST = context.REQUEST
+
+rtool.mailPassword(REQUEST['userid'], REQUEST)
+return REQUEST.RESPONSE.redirect(utool() + '/mail_password_response')
